2005-10-25  Frederic Ruaudel <grumz@grumz.net> 

	* TODO: Add list of important things to do before next release

	* libnautilus-actions/nautilus-actions-config.c:
	(nautilus_actions_config_add_action) : After call to save_action
	add the new action in the hash table.
	(nautilus_actions_config_remove_action) : After call to remove_action
	remove the action from the hash table.

	* nact/nact.c (delete_button_clicked_cb): add call to
	fill_actions_list to update the list when removing an action.

2005-10-24  Rodrigo Moya <rodrigo@novell.com>

	* nact/nact.c (fill_actions_list): new function to reload the
	actions list.
	(add_button_clicked_cb, edit_button_clicked_cb): if there were
	changes in the action editor, reload the actions list.
	(setup_actions_list): move the actions list fillin to fill_actions_list.

2005-10-23  Frederic Ruaudel <grumz@grumz.net> 

	* nact/nautilus-actions-config.glade:
	* po/bg.po:
	* po/de.po:
	* po/es.po:
	* po/fr.po:
	* po/nautilus-actions.pot:
	* po/POTFILES.in: Update i18n stuff

	* nact/nact-editor.c: Fix init of scheme list when add a
	new action and manage basenames pattern load/save in the edit dialog

	* libnautilus-actions/nautilus-actions-config.c: Set empty
	basename and scheme list valid if empty.

	* nact/nautilus-actions-config.glade:
	* nact/nact-editor.c: Add a preview icon toward the icon 
	combobox in nact edit dialog.

	* nact/nact-editor.c: Implement Add/Remove/Edit of schemes
	in nact list view.

	* nact/nautilus-actions-config.glade:
	* nact/nact-editor.c: Put back the tooltip in the edit
	dialog of nact and add add/remove button to manage scheme list.

	* nact/nact-editor.c: Finnish implementing the scheme list
	(save in gconf and prefs) and fix some compilation warnings.

2005-10-22  Frederic Ruaudel <grumz@grumz.net> 

	* nact/nautilus-actions-config.glade:
	* nact/nact-editor.c: Start implementing the scheme list 
	in the edit dialog of nact.

	* nact/nact-editor.c: Fix the add/edit dialog title in 