@@ -33,9 +33,8 @@ gchar* nautilus_actions_utils_parse_parameter (const gchar* param_template, GLis
 	 * Valid parameters :
 	 * 
 	 * %u : gnome-vfs URI
-	 * %d : selected directory or base dir of the selected file(s)
-	 * %p : parent directory of the selected directory(ies) of basedir of the file(s)
-	 * %f : the name of the selected file or the 1st one if many are selected
+	 * %d : base dir of the selected file(s)/folder(s)
+	 * %f : the name of the selected file/folder or the 1st one if many are selected
 	 * %m : list of the basename of the selected files/directories separated by space.
 	 * %M : list of the selected files/directories with their complete path separated by space.
 	 * %s : scheme of the gnome-vfs URI
@@ -60,7 +59,6 @@ gchar* nautilus_actions_utils_parse_parameter (const gchar* param_template, GLis
 		gchar* scheme = nautilus_file_info_get_uri_scheme ((NautilusFileInfo*)files->data);
 		gchar* hostname = g_strdup (gnome_vfs_uri_get_host_name (gvfs_uri));
 		gchar* username = g_strdup (gnome_vfs_uri_get_user_name (gvfs_uri));
-		gchar* parent_dir;
 		gchar* file_list;
 		gchar* path_file_list;
 		GList* file_iter = NULL;
@@ -83,21 +81,6 @@ gchar* nautilus_actions_utils_parse_parameter (const gchar* param_template, GLis
 		g_free (tmp2);
 		g_free (tmp);
 		
-		if (gnome_vfs_uri_has_parent (gvfs_uri))
-		{
-			GnomeVFSURI* gvfs_parent_uri = gnome_vfs_uri_get_parent (gvfs_uri);
-			tmp = g_path_get_dirname (gnome_vfs_uri_get_path (gvfs_parent_uri));
-			tmp2 = (gchar*)gnome_vfs_unescape_string ((const gchar*)tmp, "");
-			parent_dir = g_shell_quote (tmp2);
-			g_free (tmp2);
-			g_free (tmp);
-			gnome_vfs_uri_unref (gvfs_parent_uri);
-		}
-		else
-		{
-			parent_dir = g_strdup ("");
-		}
-
 		// We already have the first item, so we start with the next one if any
 		for (file_iter = files->next; file_iter; file_iter = file_iter->next)
 		{
@@ -128,15 +111,12 @@ gchar* nautilus_actions_utils_parse_parameter (const gchar* param_template, GLis
 				case 'u': // gnome-vfs URI
 					tmp_string = g_string_append (tmp_string, uri);
 					break;
-				case 'd': // selected directory or base dir of the selected file(s)
+				case 'd': // base dir of the selected file(s)/folder(s)
 					tmp = g_shell_quote (dirname);
 					tmp_string = g_string_append (tmp_string, tmp);
 					g_free (tmp);
 					break;
-				case 'p': // parent directory of the selected directory(ies) of basedir of the file(s)
-					tmp_string = g_string_append (tmp_string, parent_dir);
-					break;
-				case 'f': // the name of the selected file or the 1st one if many are selected
+				case 'f': // the basename of the selected file/folder or the 1st one if many are selected
 					tmp_string = g_string_append (tmp_string, filename);
 					break;
 				case 'm': // list of the basename of the selected files/directories separated by space
@@ -169,7 +149,6 @@ gchar* nautilus_actions_utils_parse_parameter (const gchar* param_template, GLis
 		}
 		
 		g_free (uri);
-		g_free (parent_dir);
 		g_free (dirname);
 		g_free (filename);
 		g_free (file_list);
